# meeting-transcript

./: .gitignore  CLAUDE.md  Justfile  README.md
docs/: PHASE1_TASKS.md  SPEC.md
frontend/: CLAUDE.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.module.css  App.tsx  index.css  types.ts
frontend/src/__tests__/: ControlBar.test.tsx  TranscriptView.test.tsx  useAudioCapture.test.ts  useAutoScroll.test.tsx  useTranscript.test.ts  useWebSocket.test.ts
frontend/src/components/: ControlBar.module.css  ControlBar.tsx  TranscriptView.module.css  TranscriptView.tsx
frontend/src/hooks/: useAudioCapture.ts  useAutoScroll.ts  useTranscript.ts  useWebSocket.ts
frontend/src/worklets/: pcm-processor.ts
sidecar/: CLAUDE.md  db.py  main.py  pyproject.toml  requirements-ml.txt  requirements.txt  storage.py  stt.py  vad.py
sidecar/scripts/: verify_stt.py
sidecar/tests/: conftest.py  test_db.py  test_health.py  test_integration.py  test_stream.py  test_stt.py  test_vad.py
src-tauri/: CLAUDE.md  Cargo.toml
src-tauri/src/: main.rs
